--- a/index.html
+++ b/index.html
@@ -9,15 +9,28 @@
 </head>
 
 <body>
-    <img src="images/angela-modified.png" alt="angela profile picture">
-    <h1>Angela Yu</h1>
-    <p>
-        <em>Founder and CTO of <strong>The App Brewery</strong>.</em>
+   <table cellspacing="" 20>
+        <tr>
+            <td>
 
-    </p>
-    <p>
-        I am an iOS and Web Developer. I love coffee and brew my own beers
-    </p>
+                <img src="images/angela-modified.png" alt="angela profile picture">
+            </td>
+            <td>
+
+                <h1>Angela Yu</h1>
+                <p>
+                    <em>Founder and CTO of <strong>
+                            <a href="https://www.appbrewery.co/">The App Brewery</a>
+                        </strong>.</em>
+
+                </p>
+                <p>
+                    I am an iOS and Web Developer. I ❤ coffee and brew my own beers
+                </p>
+            </td>
+        </tr>
+
+    </table>
     <hr>
 
     <h3>
